Fixed scrollbar error on /game as well as the error with the homepage image size.

--- a/illustrators/src/app/globals.css
+++ b/illustrators/src/app/globals.css
@@ -28,6 +28,15 @@ body {
 .background_image
 {
     background-image: url('/home_background.jpg');
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
     min-height: 100vh;
 }
+
+html, body{
+  
+  overflow-x:hidden;
+}
+
 
